k8s/test/ingress-microbot.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: microbot-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
    - host: microbot.vin-lab.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: microbot-service
              port:
                number: 80
