k8s/test/service-microbot.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
spec:
  selector:
    app: microbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
